[project]
name = "asyncpg"
description = "An asyncio PostgreSQL driver"
readme = "README.rst"
requires-python = ">=3.6"
license = { text = "Apache License, Version 2.0" }
authors = [
    { "name" = "MagicStack Inc" },
    { "email" = "hello@magic.io" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database :: Front-Ends",
]
dependencies = ["typing-extensions>=3.7.4.3;python_version<'3.8'"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/MagicStack/asyncpg"
documentation = "https://magicstack.github.io/asyncpg/current/"
repository = "https://github.com/MagicStack/asyncpg"
changelog = "https://github.com/MagicStack/asyncpg/releases"

[tool.setuptools]
platforms = ["macOS", "POSIX", "Windows"]
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["tests", "tools"]

[tool.setuptools.package-data]
# Cython sources needed for tracebacks
"*" = ["*.pyx", "*.pxd", "*.pxi"]
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-frontend = "build"
test-extras = "test"

[tool.cibuildwheel.macos]
test-command = "python {project}/tests/__init__.py"

[tool.cibuildwheel.windows]
test-command = "python {project}\\tests\\__init__.py"

[tool.cibuildwheel.linux]
before-all = ".github/workflows/install-postgres.sh"
test-command = """\
    PY=`which python` \
    && chmod -R go+rX "$(dirname $(dirname $(dirname $PY)))" \
    && su -l apgtest -c "$PY {project}/tests/__init__.py" \
    """
